# certificate-generator

./: .gitignore  README.md  certificate.py  certificates-no-qr.py  config.example.py  deps.txt  generate.py  main.py  merge_pdfs.py  pyproject.toml  qr.py  setup.bat  setup.sh
